frontend/test/should_pass/annot_002.grg
rule r {
	-x[prio=10000] : Edge->;

	modify {
	}
}

