frontend/test/should_fail/annot_004.grg
rule r {
	--> [prio=42] <--;

	modify {}
}
